  Brick has a duplicate() method, gwy_app_data_browser_get_current() supports
  brick-related items.  Python error messages are no longer silenced after
  Python modules are run.
- Color range tool: The range can be set to the range of masked/unmasked
  values.
- HDR image: NaNs and infinites in floating point images are removed and
  masked upon import.


2.37 (2014-06-27)
Application:
- Translations updated: Czech, French, Italian, Russian.

Libraries:
- libgwyprocess: A function for filling grain voids was added.
- libgwyprocess: A simple x and y derivative filter function was added.
- libgwyprocess: A regional extrema marking function was added.
- libgwyprocess: A classic Vincent watershed algorithm function was added.
- libgwydgets: Several new stock icons were added.
- libgwyprocess: Pixel count was added as a new grain quantity.
- libgwyprocess: Crash in gwy_grain_values_calculate() when a quantity was
  requested multiple times was fixed.
- libgwyprocess: New function for performing one step of facet levelling.
- libgwyddion: New data type GwyRandGenSet providing a convenient set of random
  number generators and functions for sampling from different distributions.
- libgwyprocess: DataField z-value format is now based on autorange instead of
  the full data range.
- libgwyddion: Environment variables such as GWYDDION_LIBDIR override the
  system-default paths on all systems, including OS X now.
- libgwyddion: Module and data paths on OS X are taken from the bundle
  "net.gwyddion" instead of the main bundle, fixing broken paths in the
  standalone Python gwy module.

Modules:
- WinSTM (new): Import WinSTM data files.
- Mark by Segmentation (new): Another segmentation/grain marking module, based
  on the classic Vincent algorithm.
- Grain filter (new): Filtering of grains by range criteria and logical
  expressions.
- Slope statistics (new): Statistics were split off Slope distributions, the
  GUI and functionality is the same as before.